<resources>
    <string name="app_name">PopcornApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LOGIN</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_tv_shows">TV Shows</string>
    <string name="menu_people">People</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="person_photo">person photo</string>
    <string name="action_search">Search</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="people">People</string>
    <string name="no_internet">No Internet</string>
    <string name="no_results_found">No results found</string>
    <string name="try_search_all">Try search all</string>
    <string name="gallery_title">Gallery</string>
    <string name="top_billed_cast_title">Top billed cast</string>
    <string name="reviews_title">Reviews</string>
    <string name="more">More</string>
    <string name="recommendations_title">Recommendations</string>
    <string name="shows_details">SHOWS DETAILS</string>
</resources>
