<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_movies" />
        <item
            android:id="@+id/nav_tv_shows"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_tv_shows" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_people" />
    </group>

</menu>
