<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movie_details_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_16"
        android:layout_marginEnd="@dimen/padding_16"

        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/movie_details_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Thriller" />

        <TextView
            android:id="@+id/movie_details_adult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_border"
            android:padding="2dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_details_popularity"
            tools:text="16+" />

        <TextView
            android:id="@+id/movie_details_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/movie_details_adult"
            app:layout_constraintTop_toBottomOf="@id/movie_details_popularity"
            tools:text="126 min" />

        <View
            android:id="@+id/divider_movies_length"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@id/movie_details_length"
            app:layout_constraintEnd_toStartOf="@id/movie_details_release_date"
            app:layout_constraintStart_toEndOf="@id/movie_details_length"
            app:layout_constraintTop_toTopOf="@id/movie_details_length" />

        <TextView
            android:id="@+id/movie_details_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/divider_movies_length"
            app:layout_constraintTop_toBottomOf="@+id/movie_details_popularity"
            tools:text="August, 2017" />

        <TextView
            android:id="@+id/movie_details_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="7.6" />


        <TextView
            android:id="@+id/movie_details_popularity_votes"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:drawableStart="@android:drawable/star_off"
            android:drawablePadding="0dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/movie_details_popularity"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/movie_details_popularity"
            app:layout_constraintTop_toBottomOf="@id/movie_details_popularity"
            tools:text="200" />


        <TextView
            android:id="@+id/movie_details_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_details_length"
            tools:text="overview overview overview overview overview overview overview " />

        <TextView
            android:id="@+id/show_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_8"
            android:text="@string/shows_details"
            android:textColor="#00aaaa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_details_overview" />

        <com.godelbrestandroid.popcornapp.ui.view.ExpandableView
            android:id="@+id/expandable_view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/show_details">

            <TextView
                android:paddingTop="@dimen/padding_16"
                android:id="@+id/movie_details_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tags"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_details_tags_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_details_tags" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Budget"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_details_tags_text" />

        </com.godelbrestandroid.popcornapp.ui.view.ExpandableView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/movie_details_images_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_16"
        android:layout_marginTop="@dimen/padding_16"
        android:text="@string/gallery_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_details_header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movie_details_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_details_images_title" />

    <TextView
        android:id="@+id/movie_details_top_billed_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_16"
        android:layout_marginTop="@dimen/padding_16"
        android:text="@string/top_billed_cast_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_details_images" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movie_details_top_billed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_details_top_billed_title" />


    <TextView
        android:id="@+id/movie_details_reviews_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_16"
        android:layout_marginTop="@dimen/padding_16"
        android:text="Reviews"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_details_top_billed" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movie_details_reviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_details_reviews_title" />

    <TextView
        android:id="@+id/movie_details_recommendations_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_16"
        android:layout_marginTop="@dimen/padding_16"
        android:text="@string/recommendations_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_details_reviews" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movie_details_recommendations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_details_recommendations_title" />

</androidx.constraintlayout.widget.ConstraintLayout>
